samples/_failures_safe/1761402578_b87484_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ff41fd7.c: In function ‘main’:
./samples/SAFE/__tmp_4ff41fd7.c:165:5: error: expected expression at end of input
  165 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_4ff41fd7.c:165:5: error: expected declaration or statement at end of input
